team/output/BD_772_700_1404/323/2/0/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_772_700_1404_2.py", line 58
    from __future__ import print_function
    ^
SyntaxError: from __future__ imports must occur at the beginning of the file
